2007-09-12  Tim Waugh  <twaugh@redhat.com>

	* Makefile: Version 1.9.26.

2007-09-12  Tim Waugh  <twaugh@redhat.com>

	* cupsppd.c: Better doc strings throughout.

2007-09-11  Tim Waugh  <twaugh@redhat.com>

	* cupsppd.c: Start of better doc strings for PPD functions.

2007-09-07  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c: Better doc strings throughout.

2007-09-06  Tim Waugh  <twaugh@redhat.com>

	* Makefile (doc): New rule.

	* cupsconnection.c: Start of better documentation.

2007-08-30  Tim Waugh  <twaugh@redhat.com>

	* Makefile: Version 1.9.25.

2007-08-30  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_adminGetServerSettings): Fix
	compilation with CUPS 1.3.
	(Connection_adminSetServerSettings): Likewise.

	* Makefile: Removed 'tag' target, updated 'dist' target for svn.

	* cupsconnection.c (Connection_getServerPPD): New method.

	* cupsmodule.c (initcups): Define CUPS_SERVER_REMOTE_ANY.

	* cupsmodule.h: Check for CUPS 1.3.

2007-07-06  Tim Waugh  <twaugh@redhat.com>

	* cupsppd.c: Better docstring for PPD.markOption.

2007-06-08  Tim Waugh  <twaugh@redhat.com>

	* Makefile: Ship examples directory correctly.

2007-06-08  Tim Waugh  <twaugh@redhat.com>

	* Makefile: Version 1.9.24.

2007-06-08  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_adminSetServerSettings): In Python
	2.5, PyDict_Next() uses a ssize_t-like type for the position, not
	int (bug #239805).

	* cupsconnection.c (Connection_getClasses): Fixed typo in
	debugging output.

2007-06-07  Tim Waugh  <twaugh@redhat.com>

	* Makefile: Version 1.9.23.

2007-06-07  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_adminSetServerSettings): Debug
	output.

	* cupsppd.c (cautious_PyUnicode_DecodeUTF8): New function to
	safe-guard against supposed UTF-8 strings that are incorrect (bug
	#242962).

2007-05-18  Tim Waugh  <twaugh@redhat.com>

	* examples/cupstree.py: New file.

2007-05-17  Tim Waugh  <twaugh@redhat.com>
